--- a/payroll/i18n/bs.po
+++ b/payroll/i18n/bs.po
@@ -1941,7 +1941,7 @@ msgstr "Pravila obračuna"
 #: code:addons/payroll/models/hr_payslip.py:0
 #, python-format
 msgid "Salary Slip of %s for %s"
-msgstr "Platni listić %s za %s"
+msgstr "Platna lista za %s, %s"
 
 #. module: payroll
 #: model:ir.model,name:payroll.model_hr_payroll_structure
@@ -1950,13 +1950,13 @@ msgstr "Platni listić %s za %s"
 #: model_terms:ir.ui.view,arch_db:payroll.hr_payslip_line_view_tree
 #: model_terms:ir.ui.view,arch_db:payroll.hr_payslip_view_form
 msgid "Salary Structure"
-msgstr "Struktura obračuna plate"
+msgstr "Struktura obračuna"
 
 #. module: payroll
 #: model:ir.actions.act_window,name:payroll.hr_payroll_structure_action
 #: model:ir.ui.menu,name:payroll.hr_payroll_structure_menu
 msgid "Salary Structures"
-msgstr "Strukture obračuna plate"
+msgstr "Strukture obračuna"
 
 #. module: payroll
 #: model_terms:ir.ui.view,arch_db:payroll.hr_payslip_view_form
@@ -1971,22 +1971,22 @@ msgstr "Zakazana isplata"
 #. module: payroll
 #: model_terms:ir.ui.view,arch_db:payroll.hr_payslip_run_view_search
 msgid "Search Payslip Batches"
-msgstr "Pretraži skupne platne liste"
+msgstr "Pretraži grupne obračune"
 
 #. module: payroll
 #: model_terms:ir.ui.view,arch_db:payroll.hr_payslip_line_view_search
 msgid "Search Payslip Lines"
-msgstr "Pretraži stavke obračunskih listića"
+msgstr "Pretraži stavke platnih listi"
 
 #. module: payroll
 #: model_terms:ir.ui.view,arch_db:payroll.hr_payslip_view_search
 msgid "Search Payslips"
-msgstr "Pretraži obračunske listiće"
+msgstr "Pretraži platne liste"
 
 #. module: payroll
 #: model_terms:ir.ui.view,arch_db:payroll.hr_salary_rule_view_search
 msgid "Search Salary Rule"
-msgstr "Pretraži pravilo obračuna plate"
+msgstr "Pretraži pravilo obračuna"
 
 #. module: payroll
 #: model:ir.model.fields.selection,name:payroll.selection__hr_contract__schedule_pay__semi-annually
