--- a/payroll/i18n/bs.po
+++ b/payroll/i18n/bs.po
@@ -664,7 +664,7 @@ msgstr "Stavke doprinosa platnog listića"
 #: model_terms:ir.ui.view,arch_db:payroll.hr_contribution_register_view_search
 #: model_terms:ir.ui.view,arch_db:payroll.hr_contribution_register_view_tree
 msgid "Contribution Registers"
-msgstr "Registri doprinosa"
+msgstr "Registri isplata"
 
 #. module: payroll
 #: model:hr.salary.rule,name:payroll.hr_salary_rule_convanceallowance1
@@ -1531,18 +1531,18 @@ msgstr "Detalji obračuna"
 
 #. module: payroll
 #: model:ir.actions.act_window,name:payroll.action_payslip_lines_contribution_register
-msgid "PaySlip Lines"
-msgstr "Stavke obračuna"
+msgid "Payslip Contribution Register Lines"
+msgstr "Prigkaz stavki registra isplata"
 
 #. module: payroll
 #: model:ir.actions.report,print_report_name:payroll.action_contribution_register
 msgid "PaySlip Lines By Contribution Register"
-msgstr "Stavke platne liste prema registru kontribucije"
+msgstr "Pregled po registru isplata"
 
 #. module: payroll
 #: model_terms:ir.ui.view,arch_db:payroll.report_contributionregister
 msgid "PaySlip Lines by Contribution Register"
-msgstr "Stavke platnih listića po registrima doprinosa"
+msgstr "Pregled po registrima isplata"
 
 #. module: payroll
 #: model_terms:ir.ui.view,arch_db:payroll.report_contributionregister
@@ -1565,7 +1565,7 @@ msgstr "Knjigovodstvo plata"
 #. module: payroll
 #: model:ir.model,name:payroll.model_report_payroll_report_contributionregister
 msgid "Payroll Contribution Register Report"
-msgstr "Izvještaj registra doprinosa obračuna plate"
+msgstr "Izvještaj registra isplata"
 
 #. module: payroll
 #: model_terms:ir.ui.view,arch_db:payroll.res_config_settings_view_form
@@ -1653,12 +1653,12 @@ msgstr "Stavke platne liste"
 #. module: payroll
 #: model_terms:ir.ui.view,arch_db:payroll.report_payslipdetails
 msgid "Payslip Lines by Contribution Register"
-msgstr "Stavke obračunskog listića po registru doprinosa"
+msgstr "Stavke po registru isplata"
 
 #. module: payroll
 #: model:ir.model,name:payroll.model_payslip_lines_contribution_register
 msgid "Payslip Lines by Contribution Registers"
-msgstr "Stavke obračunskog listića po registru doprinosa"
+msgstr "Stavke po registrima isplata"
 
 #. module: payroll
 #: model:ir.model.fields,field_description:payroll.field_hr_payslip__name
