hr.timesheet.work_type - work_type_id

--- a/payroll/i18n/bs.po
+++ b/payroll/i18n/bs.po
@@ -387,7 +387,7 @@ msgstr "Godišnje"
 #: model:ir.model.fields,field_description:payroll.field_hr_payslip_line__appears_on_payslip
 #: model:ir.model.fields,field_description:payroll.field_hr_salary_rule__appears_on_payslip
 msgid "Appears on Payslip"
-msgstr "Vidljivo na listiću"
+msgstr "Vidljivo na obračunu"
 
 #. module: payroll
 #: model:ir.model.fields,help:payroll.field_hr_payslip_line__condition_python
