--- a/payroll/i18n/bs.po
+++ b/payroll/i18n/bs.po
@@ -2302,3 +2302,21 @@ msgstr "pravilo će utiecati na varijablu"
 #: model_terms:ir.ui.view,arch_db:payroll.hr_payslip_line_view_form
 msgid "total_net"
 msgstr "total_net"
+
+#. module: payroll
+#: code:addons/payroll/models/hr_payslip.py:0
+#, python-format
+msgid "Food included"
+msgstr "Topli obrok"
+
+#. module: payroll
+#: code:addons/payroll/models/hr_payslip.py:0
+#, python-format
+msgid "Rest time"
+msgstr "Vrijeme bez učinka"
+
+#. module: payroll
+#: code:addons/payroll/models/hr_payslip.py:0
+#, python-format
+msgid "Full month working days"
+msgstr "Ukupan fond sati obračunskog mjeseca"
